--- a/index.html
+++ b/index.html
@@ -3,111 +3,183 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Wardrobe Suggestions</title>
+    <title>GarbAI Chatbot</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    
     <style>
-        /* Style for the body to center the container */
-        body {
-            font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        * {
             margin: 0;
-            background: linear-gradient(135deg, #1f2937, #3b82f6);
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Poppins', sans-serif;
+        }
+
+        body {
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
-            color: #fff;
+            background-color: black;
+            color: white;
+            flex-direction: column;
         }
-        /* Style for the container */
-        .container {
-            text-align: center;
-            padding: 30px;
-            background: #2d3748;
-            border-radius: 12px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
+
+        .title-box, .chatbox {
             width: 400px;
-        }
-        /* Style for the title */
-        h1 {
-            margin-bottom: 20px;
-            font-size: 24px;
-            color: #60a5fa;
-        }
-        /* Style for the input box */
-        textarea {
-            width: 100%;
-            height: 100px;
-            padding: 10px;
-            font-size: 16px;
-            color: #fff;
-            background: #1f2937;
-            border: 2px solid #60a5fa;
-            border-radius: 8px;
-            outline: none;
-            resize: none;
+            background: rgba(255, 255, 255, 0.1);
+            padding: 20px;
+            border-radius: 15px;
+            backdrop-filter: blur(10px);
+            box-shadow: 0 4px 10px rgba(255, 255, 255, 0.2);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            text-align: center;
             margin-bottom: 20px;
         }
-        /* Style for the button */
-        button {
-            width: 100%;
-            padding: 12px;
-            font-size: 16px;
-            font-weight: bold;
-            color: #fff;
-            background: #2563eb;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            transition: all 0.3s ease-in-out;
-        }
-        button:hover {
-            background: #1e40af;
-        }
-        /* Style for the response box */
-        .response {
-            margin-top: 20px;
+
+        .messages {
+            height: 350px;
+            overflow-y: auto;
             padding: 15px;
-            font-size: 14px;
-            background: #374151;
-            border: 1px solid #60a5fa;
-            border-radius: 8px;
-            word-wrap: break-word;
-            white-space: pre-wrap;
             text-align: left;
+            background: rgba(255, 255, 255, 0.15);
+            border-radius: 10px;
+            box-shadow: inset 0 0 10px rgba(255, 255, 255, 0.2);
+            display: flex;
+            flex-direction: column;
+        }
+
+        .message {
+            margin: 5px 0;
+            padding: 12px;
+            border-radius: 15px;
+            max-width: 80%;
+            word-wrap: break-word;
+            font-size: 14px;
+            opacity: 0;
+            animation: fadeIn 0.3s ease-in forwards;
+        }
+
+        .user {
+            background: linear-gradient(45deg, #6a0dad, #9d00ff);
+            align-self: flex-end;
+            color: white;
+            text-align: right;
+        }
+
+        .bot {
+            background: rgba(255, 255, 255, 0.2);
+            align-self: flex-start;
+            text-align: left;
+        }
+
+        .input-container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-top: 15px;
+        }
+
+        input {
+            width: 75%;
+            padding: 12px;
+            border-radius: 25px;
+            border: none;
+            background: rgba(255, 255, 255, 0.15);
+            color: white;
+            text-align: center;
+            font-size: 14px;
+            outline: none;
+            transition: 0.3s;
+            box-shadow: inset 0 0 5px rgba(255, 255, 255, 0.1);
+        }
+
+        input:focus {
+            box-shadow: 0 0 10px rgba(106, 13, 173, 0.8);
+        }
+
+        button {
+            width: 20%;
+            padding: 12px;
+            background: linear-gradient(45deg, #6a0dad, #9d00ff);
+            color: white;
+            border: none;
+            border-radius: 25px;
+            cursor: pointer;
+            font-size: 14px;
+            transition: 0.3s;
+        }
+
+        button:hover {
+            background: linear-gradient(45deg, #9d00ff, #6a0dad);
+            transform: scale(1.05);
+            box-shadow: 0 0 15px rgba(157, 0, 255, 0.6);
+        }
+
+        .messages::-webkit-scrollbar {
+            width: 6px;
+        }
+        .messages::-webkit-scrollbar-thumb {
+            background: rgba(255, 255, 255, 0.3);
+            border-radius: 10px;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(10px); }
+            to { opacity: 1; transform: translateY(0); }
         }
     </style>
 </head>
-<body>
-    <div class="container">
-        <h1>AI Wardrobe Suggestions</h1>
-        <textarea id="user-input" placeholder="Describe your preferences..."></textarea>
-        <button onclick="getSuggestions()">Get Suggestions</button>
-        <div id="response" class="response" style="display: none;"></div>
+<body onload="checkAuth()">
+    <div class="title-box">
+        <h1>GARB-AI</h1>
+    </div>
+
+    <div class="chatbox">
+        <h2>AI-STYLING AREA</h2>
+        <div class="messages" id="messages">
+            <div class="message bot">Hello! I'm GARBY, Tell me your styling queries</div>
+        </div>
+        <div class="input-container">
+            <input type="text" id="user-input" placeholder="Type your message...">
+            <button onclick="sendMessage()">➤</button>
+        </div>
     </div>
 
     <script>
-        async function getSuggestions() {
-            const userInput = document.getElementById("user-input").value;
-            const responseDiv = document.getElementById("response");
-            responseDiv.style.display = "none";
-
-            try {
-                const response = await fetch("http://127.0.0.1:8000/api/generate-suggestions", {
-                    method: "POST",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ user_input: userInput }),
-                });
-
-                if (response.ok) {
-                    const data = await response.json();
-                    responseDiv.innerHTML = `<strong>Suggestions:</strong><br>${data.message}`;
-                    responseDiv.style.display = "block";
-                } else {
-                    responseDiv.innerHTML = `<strong>Error:</strong> Unable to fetch suggestions.`;
-                    responseDiv.style.display = "block";
-                }
-            } catch (error) {
-                responseDiv.innerHTML = `<strong>Error:</strong> ${error.message}`;
-                responseDiv.style.display = "block";
+        function checkAuth() {
+            if (!localStorage.getItem("auth")) {
+                window.location.href = "login.html";
             }
+        }
+
+        async function sendMessage() {
+            const input = document.getElementById("user-input").value;
+            if (!input) return;
+
+            const messages = document.getElementById("messages");
+
+            const userMessage = document.createElement("div");
+            userMessage.className = "message user";
+            userMessage.innerText = input;
+            messages.appendChild(userMessage);
+            document.getElementById("user-input").value = "";
+
+            messages.scrollTop = messages.scrollHeight;
+
+            const response = await fetch("http://127.0.0.1:8000/api/generate-suggestions", {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ user_input: input })
+            });
+
+            const result = await response.json();
+
+            const botMessage = document.createElement("div");
+            botMessage.className = "message bot";
+            botMessage.innerText = result.message || "I am here to help!";
+            messages.appendChild(botMessage);
+
+            messages.scrollTop = messages.scrollHeight;
         }
     </script>
 </body>
